updated support mailId

--- a/src/ts/app/components/init/headerComponent/views/desktop/_.html
+++ b/src/ts/app/components/init/headerComponent/views/desktop/_.html
@@ -1,7 +1,7 @@
 <nav>
     <div class="nav-wrapper">
         <a href="#" class="brand-logo _logo" data-bind="click : showHomeScreen">
-            <img src="${require(`./../../../icons/xorchat-logo.svg`)}" alt="" data-intro="OpenXorchat Support" data-position="bottom">
+            <img src="${require(`./../../../icons/xorchat-logo.svg`)}" alt="" data-intro="OpenXorcht Home" data-position="bottom">
         </a>
 
         <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -60,7 +60,7 @@
     <div class="modal-content valign-wrapper">
         <div class="_feedback-text center-align">
             Any bug reporting, feature request or feedback please drop mail with screenshot to
-            <a style="text-decoration: none;" href="mailto:xorchat_support@xoriant.com"> xorchat_support@xoriant.com</a>
+            <a style="text-decoration: none;" href="mailto:openxorchat_support@xoriant.com"> openxorchat_support@xoriant.com</a>
         </div>
     </div>
     <div class="modal-footer">
